--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <img src="https://picsum.photos/id/1072/300/300">
   </section>
   <hr>
-  <h2>Tringular fragmentation</h2>
-  <section class="triangular">
+  <h2>Triangle fragmentation</h2>
+  <section class="Triangle">
   <img src="https://picsum.photos/id/1069/300/300">
   <img src="https://picsum.photos/id/1032/300/300">
   <img src="https://picsum.photos/id/1072/300/300">
