--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
   <hr>
   <h2>Square fragmentation</h2>
   <section class="square">
-  <img src="https://picsum.photos/id/1069/300/300">
-  <img src="https://picsum.photos/id/1032/300/300">
-  <img src="https://picsum.photos/id/1072/300/300">
+  <img src="https://picsum.photos/id/1069/300/300" style="--f-n:40;--f-m:40;--f-seed:54">
+  <img src="https://picsum.photos/id/1032/300/300" style="--f-n:20;--f-m:20;--f-seed:122">
+  <img src="https://picsum.photos/id/1072/300/300" style="--f-n:10;--f-m:10;--f-seed:589">
   </section>
   <hr>
   <h2>Triangle fragmentation</h2>
   <section class="Triangle">
-  <img src="https://picsum.photos/id/1069/300/300">
-  <img src="https://picsum.photos/id/1032/300/300">
-  <img src="https://picsum.photos/id/1072/300/300">
+  <img src="https://picsum.photos/id/1069/300/300" style="--f-n:50;--f-seed:514">
+  <img src="https://picsum.photos/id/1032/300/300" style="--f-n:40;--f-seed:111">
+  <img src="https://picsum.photos/id/1072/300/300" style="--f-n:20;--f-seed:141">
   </section>
   <hr>
   <h2>Hexagon fragmentation</h2>
